bin/resources/app/themes/dark/dark.css
/* Global modifiers */

:root {
	--color-primary: #5584d4;
	--color-background: #222222;
	--color-hightlight-background: #333333;
}

body {
	background: var(--color-background);
}

input {
	background-color: var(--color-hightlight-background);
	border: none;
	color: white;
}

input[type=button], button {
	background-color: #222222;
	background-color: var(--color-hightlight-background);
	border: none;
	color: white;
	padding: 7px;
	padding-left: 10px;
	padding-right: 10px;
	cursor: pointer;
}
input[type="button"]:hover {
	outline: 1px solid #5584d4;
	outline-color: var(--color-primary);
}
input[type="button"]:active {
	background-color: #5584d4;
	background-color: var(--color-primary);
}

input[type=text], input[type=number] {
	padding: 5px;
}
input[type=text]:disabled, input[type=number]:disabled {
	color:rgba(255, 255, 255, 0.5);
	opacity: 0.5;
}

input[type=checkbox], input[type=radio] {
	vertical-align: top;
    width: 13px;
    height: 13px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: none;
    position: relative;
	cursor: pointer;
	border: rgba(255, 255, 255, 0.3) solid 1px;
}
input[type=checkbox]:disabled, input[type=radio]:disabled {
	opacity: 0.5px;
}
input[type=checkbox]:checked:before, input[type=radio]:checked:before {
	margin: 0;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

input[type=checkbox]:checked {
	background-color: #5584d4;
	background-color: var(--color-primary);
}
input[type=checkbox]:checked:before {
	content: "✔";
	color:white;
	font-size: 12px;
}
input[type=radio] {
	border-radius: 10px;
}
input[type=radio]:checked {
	background-color: #5584d4;
	background-color: var(--color-primary);
	text-align: center;
}
input[type=radio]:checked:before {
	content: "•";
	color:white;
	font-size: 19px;
}
input[type=range] {
	-webkit-appearance: none;
	background: red; /* Only showes up if you forget to prettify it */
	margin-top: 10px;
	margin-bottom: 10px;;
}
input[type=range]:disabled {
	opacity: 0.5;
}
input[type=range]::-webkit-slider-thumb {
	-webkit-appearance: none;
	background-color: #5584d4;
	background-color: var(--color-primary);
	width: 16px;
	height: 16px;
	border-radius: 10px;
	margin-top: -6px;
}

input[type=range]::-webkit-slider-runnable-track {
	width: 100%;
	cursor: pointer;
	height: 3px;
	/* Hides the slider so custom styles can be added */
	border-color: transparent;
	color: transparent;
}




select {
	background-color: #333;
	color: #eeeeee;
	border: none;
	padding: 6px;
}
* {
    -webkit-tap-highlight-color: var(--color-primary) !important;
    -webkit-focus-ring-color:var(--color-primary) !important;
}

*:focus {
	outline-color: var(--color-primary) !important;
}


input[type=button].highlighted_button, button.highlighted_button, .highlighted-button,
button[type=button].highlighted-button {
	background-color: #5584d4;
	background-color: var(--color-primary);
	font-weight: 600;
}

/* */
#splitter-td, .splitter-td {
	border-color: #161719;
	background: #495057;
}
#misc-splitter-td {
	background: #505050;
}
#main #editor-td {
	background-color: #222222;
	color: #C0C0C0;
}
#game-td .chrome-tabs input,
#game-td .chrome-tabs select {
	color: white;
	border-color: #555;
}
#game-td .chrome-tabs input[type="button"] {
	background: #373737;
}
#game-td .chrome-tabs input[type="button"]:hover {
	background: #505050;
}
#game-td .chrome-tabs select {
	background-color: #373737;
	background-position: center right 6px;
	background-image: url(data:image/bmp;base64,Qk1mAAAAAAAAADYAAAAoAAAABQAAAAMAAAABABgAAAAAAAAAAADEDgAAxA4AAAAAAAAAAAAANzc3Nzc3////Nzc3Nzc3/zc3N////////////zc3N///////////////////////);
}
.project-name {
	color: white;
	text-shadow: none;
}
.chrome-tabs .chrome-tab:not(.chrome-tab-current):hover .chrome-tab-background > svg .chrome-tab-background {
	fill: #444;
}
/* */
.treeview {
	background: #222222;
	--treeview-background-color: #222222;
	color: #D0D0D0;
}
.treeview div[data-color] {
	color: white;
}
.treeview .header:not(:active):hover, .treeview .header:not(:active):hover > span,
.treeview .item:not(:active):hover, .treeview .item:not(:active):hover > span {
	background: #495057;
}
.treeview .dir .header, .treeview .item, .treeview .items {
	border-left-color: #495057;
}
.treeview .dir > .header:before, .treeview .item:before {
	background-image: url(tree.png);
	background-size: auto 100%;
}
.treeview .inline-text-field {
	background: #222222;
    color: white;
    border: none;
}

/* */
#global-search {
	height: 200px;
	width: 540px;
	padding: 12px;
}

.popout-window {
	background-color: #333333;
	border: none;
	color: #c0c0c0;
	box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.45);
}
.popout-window legend {
	color: inherit;
}
.popout-window fieldset, .popout-window hr {
	border-color: #495057;
}
.popout-window a {
	color: #40C3F4;
}

.popout-window input[type="text"],
.popout-window select {
	background: #444;
}
.popout-window select option[hint]:after {
	background: #111;
	color: white;
}

#preferences-editor, #keybindings-editor {
	background-color: #222222;
	background-color: var(--color-background);
}
#preferences-editor input[type="text"],
#preferences-editor input[type="button"],
.ace_optionsMenuEntry button,
.ace_optionsMenuEntry button:hover,
#preferences-editor select {
	background: #333;
}

#ace_settingsmenu {
	background: #222;
	color: #C0C0C0;
	box-shadow: 4px 5px rgba(0, 0, 0, 0.55);
}
.ace_optionsMenuEntry button:not(:first-child) {
	margin-left: 2px;
}
.ace_optionsMenuEntry button,
.ace_optionsMenuEntry button[ace_selected_button=true] {
	border: none;
	box-shadow: none;
}
.ace_optionsMenuEntry button:hover {
	box-shadow: #5584d4 0 0 2px inset;
	box-shadow: var(--color-primary) 0 0 2px inset;
}
.ace_optionsMenuEntry button[ace_selected_button=true] {
	background-color: #5584d4;
	background-color: var(--color-primary);
}

/* gutter */
#main .ace_gutter,
#main .ace_status-bar {
	background-color: #2B343B;
	color: #40C3F4;
	border-color: #495057;
}
/* ... */

